[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = piaudio
version = attr: piaudio.__version__
description = A web interface for controlling audio services on a Raspberry Pi.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = MIT License
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    connexion
    connexion[swagger-ui]
    flask-assets
    jsmin
    libsass

[pycodestyle]
count = False
ignore =
   # closing bracket is missing indentation
  E133,
  # line too long
  E501,
hang-closing = True
statistics = True

[pydocstyle]
ignore =
  # Missing docstring in __init__
  D107,
  # 1 blank line required before class docstring
  D203,
  # Multi-line docstring summary should start at the second line
  D213,
